Fix visual misalignment with smaller screen sizes

--- a/css/index.css
+++ b/css/index.css
@@ -129,3 +129,9 @@ h1, h2, #pomodoroTimerText, p {
   }
   
 }
+
+@media (max-width: 500px) {
+  .container {
+    width: 70%;
+  }
+}
